--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ name: Test
 on: [push]
 
 jobs:
-  clojure:
+  test:
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Mise
+      - name: Mise
         uses: jdx/mise-action@v2
 
-      - name: Cache Clojure dependencies
+      - name: Cache
         uses: actions/cache@v4
         with:
           path: |
