Used tools.build to build a jar
Not uberjaring right now even if startup is faster because I worry about
JVM bytecode compat

--- a/mise.toml
+++ b/mise.toml
@@ -16,3 +16,9 @@ run = "clojure -M:antq"
 [tasks.repl]
 raw = true
 run = "clojure -X:test:dev:flowstorm giants-shoulders.repl/start!"
+
+[tasks.build]
+run = "clojure -T:build jar"
+
+[tasks.clean]
+run = "clojure -T:build clean"
