--- a/mise.toml
+++ b/mise.toml
@@ -1,5 +1,5 @@
 [tools]
-clojure = "1.12.0"
+clojure = "1.12.1"
 java = "temurin-21.0.6+7.0.LTS"
 
 [tasks.format]
@@ -9,13 +9,17 @@ run = "clojure -M:format"
 raw = true
 run = "clojure -M:test:dev"
 
+[tasks.typecheck]
+raw = true
+run = "clojure -M:typedclojure -e \"(require 'typed.clojure) (typed.clojure/check-dir-clj [\\\"src\\\"])\""
+
 [tasks.antq]
 raw = true
 run = "clojure -M:antq"
 
-[tasks.repl]
+[tasks.dev]
 raw = true
-run = "clojure -X:test:dev:flowstorm giants-shoulders.repl/start!"
+run = "clojure -X:test:dev:flowstorm typedclojure-lsp.dev/start!"
 
 [tasks.build]
 run = "clojure -T:build jar"
